Decrease Gap-Fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -321,6 +321,7 @@ img{
   font-size: var(--h3-font-size);
   color: var(--title-color);
   margin-bottom: var(--mb-1);
+  margin-top: -80px;
 }
 
 .services__description{
@@ -522,6 +523,7 @@ img{
 
   .app__store{
     margin: 0 var(--mb-1) 0 0;
+    width: 150px;
   }
 }
 
